manifests/base/clusterprofile-controller/argocd-clusterprofile-controller-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: argocd-clusterprofile-controller
    app.kubernetes.io/part-of: argocd
    app.kubernetes.io/component: clusterprofile-controller
  name: argocd-clusterprofile-controller
spec:
  replicas: 0
  selector:
    matchLabels:
      app.kubernetes.io/name: argocd-clusterprofile-controller
  template:
    metadata:
      labels:
        app.kubernetes.io/name: argocd-clusterprofile-controller
    spec:
      containers:
        - args:
            - /usr/local/bin/argocd-clusterprofile-controller
          image: quay.io/argoproj/argocd:latest
          imagePullPolicy: Always
          name: argocd-clusterprofile-controller
          ports:
            - containerPort: 8080
              name: metrics
          volumeMounts:
            - mountPath: /tmp
              name: tmp
            - name: argocd-cmd-params-cm
              mountPath: /home/argocd/params
          securityContext:
            capabilities:
              drop:
                - ALL
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
      serviceAccountName: argocd-clusterprofile-controller
      volumes:
        - emptyDir: { }
          name: tmp
        - name: argocd-cmd-params-cm
          configMap:
            optional: true
            name: argocd-cmd-params-cm
      nodeSelector:
        kubernetes.io/os: linux
