manifests/base/clusterprofile-controller/argocd-clusterprofile-controller-service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/component: clusterprofile-controller
    app.kubernetes.io/name: argocd-clusterprofile-controller
    app.kubernetes.io/part-of: argocd
  name: argocd-clusterprofile-controller
spec:
  ports:
  - name: metrics
    port: 8080
    protocol: TCP
    targetPort: metrics
  selector:
    app.kubernetes.io/name: argocd-clusterprofile-controller
